--- a/.classpath
+++ b/.classpath
@@ -11,10 +11,10 @@
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_1.jar"/>
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_2.jar"/>
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_3.jar"/>
-	<classpathentry kind="lib" path="libs/SocialSDK_Sina.jar"/>
-	<classpathentry kind="lib" path="libs/SocialSDK_tencentWB_1.jar"/>
-	<classpathentry kind="lib" path="libs/SocialSDK_tencentWB_2.jar"/>
-	<classpathentry kind="lib" path="libs/SocialSDK_tencentWB_3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_Sina.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_tencentWB_1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_tencentWB_2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_tencentWB_3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_WeiXin_1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_WeiXin_2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/umeng_social_sdk.jar"/>
@@ -22,7 +22,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/okio-1.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/okhttp-2.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/httpmime-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/httpmime-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xUtils-2.5.5.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
