--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=..\\MultiPhotolib
 android.library=false
 android.library.reference.2=..\\Loonlibs
 android.library.reference.3=..\\PullToRefreshLib
+android.library.reference.4=../wheelLib
