--- a/project.properties
+++ b/project.properties
@@ -14,6 +14,5 @@
 target=android-22
 android.library.reference.1=..\\MultiPhotolib
 android.library=false
-android.library.reference.2=..\\Loonlibs
-android.library.reference.3=..\\PullToRefreshLib
-android.library.reference.4=../wheelLib
+android.library.reference.2=..\\wheelLib
+android.library.reference.3=..\\Loonlibs
