--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lansun.qmyo"
     android:versionCode="1"
-    android:versionName="1.2.0" >
+    android:versionName="1.2.1" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -53,14 +53,26 @@
         
         
         <!--  包名为com.lansun.qmyo     申请    发布版本模式下的高德地图的key -->
-	   <!--   <meta-data
+	      <meta-data
 	            android:name="com.amap.api.v2.apikey"
-	            android:value="a81d22502d5958d33c95c7e32f97c656" />  -->
-	            <!-- Guzman key -->
-	     <meta-data
+	            android:value="a81d22502d5958d33c95c7e32f97c656" />  
+	           
+	           
+	    <!-- Guzman key -->
+	    <!--  <meta-data
 	            android:name="com.amap.api.v2.apikey"
-	            android:value="6f42a67f536e232ba8ba4bf7744ee749" /> 
+	            android:value="6f42a67f536e232ba8ba4bf7744ee749" />  -->
 	        
+	   
+	   
+	   
+	    <!-- 后台开启的高德定位服务 -->
+        <service
+                 android:name="com.lansun.qmyo.service.LocationService"
+                 android:exported="false" />   
+	       
+	       
+	       
 	        
        
         <!-- 友盟的元数据 -->
@@ -84,22 +96,21 @@
             android:name="com.tencent.connect.common.AssistActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-       
-        
         
         <activity
             android:name="com.lansun.qmyo.MainActivity"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden" >
         </activity>
         <activity
             android:name="com.lansun.qmyo.SplashActivity"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
