--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-22
 android.library=false
-android.library.reference.1=../Loonlibs
-android.library.reference.2=../MultiPhotolib
-android.library.reference.3=../wheelLib
+android.library.reference.1=..\\MultiPhotolib
+android.library.reference.2=..\\wheelLib
+android.library.reference.3=../Loonlibs
