--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/badgeview.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xUtils-2.5.5.jar"/>
@@ -28,6 +26,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_WeiXin_1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/SocialSDK_WeiXin_2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/umeng_social_sdk.jar"/>
-	<classpathentry kind="lib" path="libs/nineoldandroids-2.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/nineoldandroids-2.4.0.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
