--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-21
+target=android-22
 android.library=false
 android.library.reference.1=..\\MultiPhotolib
-android.library.reference.2=..\\wheelLib
-android.library.reference.3=../Loonlibs
+android.library.reference.2=..\\Loonlibs
+android.library.reference.3=../wheel
