--- a/project.properties
+++ b/project.properties
@@ -14,5 +14,5 @@
 target=android-22
 android.library=false
 android.library.reference.1=..\\MultiPhotolib
-android.library.reference.2=..\\Loonlibs
-android.library.reference.3=../wheel
+android.library.reference.2=..\\wheel
+android.library.reference.3=../Loonlibs
