--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-22
 android.library=false
-android.library.reference.1=..\\MultiPhotolib
-android.library.reference.2=..\\wheel
-android.library.reference.3=../Loonlibs
+android.library.reference.1=..\\Loonlibs
+android.library.reference.2=../MultiPhotolib
+android.library.reference.3=../wheel
