--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lansun.qmyo"
-    android:versionCode="7"
-    android:versionName="1.2.7" >
+    android:versionCode="8"
+    android:versionName="1.2.8" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -40,9 +40,9 @@
        
        
         <!--  包名为com.lansun.qmyo 本人(Yeun's LansunCorp  PC上)申请开发模式下的高德地图的key -->
-         <meta-data
+       <!--   <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="e5b6027255bb77d1aa285e5cec53c134" />   
+            android:value="e5b6027255bb77d1aa285e5cec53c134" />    -->
        
          <!--  包名为com.lansun.qmyo 本人(Yeun's  PC上)申请开发模式下的高德地图的key -->
       <!--  <meta-data
@@ -51,9 +51,9 @@
         
         
         <!--  包名为com.lansun.qmyo     申请    发布版本模式下的高德地图的key -->
-	 <!--      <meta-data
+	     <meta-data
 	            android:name="com.amap.api.v2.apikey"
-	            android:value="a81d22502d5958d33c95c7e32f97c656" />  -->
+	            android:value="a81d22502d5958d33c95c7e32f97c656" /> 
 	           
 	           
 	    <!-- Guzman key -->
@@ -99,8 +99,9 @@
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
-             ><!-- android:launchMode="singleTask" android:windowSoftInputMode="adjustResize|stateAlwaysHidden"-->
+             ><!--  android:windowSoftInputMode="adjustResize|stateAlwaysHidden"-->
         </activity>
         <activity
             android:name="com.lansun.qmyo.SplashActivity"
