Yeun.zhang 2016-01-08 版本 1.2.14.1
提交内容涉及：私人秘书和登录注册页底部云图的动态显示、活动收藏和门店收藏的侧滑不灵敏的bug修复

--- a/project.properties
+++ b/project.properties
@@ -7,20 +7,21 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 #
-# To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-#proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+#To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
 target=android-22
 android.library=false
 android.library.reference.1=..\\BlurLibs
 android.library.reference.2=..\\CircurImageLibs
-android.library.reference.3=..\\Loonlibs
-android.library.reference.4=..\\wheel
-android.library.reference.5=..\\JpBlurryLibs
-android.library.reference.6=..\\FloatingButtonLibs
-android.library.reference.7=..\\JumpingLibs
-android.library.reference.8=..\\JazzyViewPagerLibs
-android.library.reference.9=..\\view.customviewpager
-android.library.reference.10=..\\DragImageView
-android.library.reference.11=../MultiPhotolib
+android.library.reference.3=..\\wheel
+android.library.reference.4=..\\JpBlurryLibs
+android.library.reference.5=..\\FloatingButtonLibs
+android.library.reference.6=..\\JumpingLibs
+android.library.reference.7=..\\view.customviewpager
+android.library.reference.8=..\\DragImageView
+android.library.reference.9=..\\MultiPhotolib
+android.library.reference.10=..\\Loonlibs
+
+android.library.reference.11=../JazzyViewPagerLibs
