--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,6 +82,17 @@
              ><!--  android:excludeFromRecents="true"
              android:windowSoftInputMode="adjustResize|stateAlwaysHidden"-->
         </activity>
+        
+        <!-- 抢红包的 分享页面  -->
+        <activity
+            android:name="com.lansun.qmyo.GrabRedPackActivity"
+            android:hardwareAccelerated="true"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
+        </activity>
+        
         <activity
             android:name="com.lansun.qmyo.SplashActivity"
             android:screenOrientation="portrait" >
