Yeun.zhang  2016-01-15 版本 1.2.13.0
涉及修改内容：红包内测

--- a/project.properties
+++ b/project.properties
@@ -24,4 +24,5 @@ android.library.reference.8=..\\DragImageView
 android.library.reference.9=..\\MultiPhotolib
 android.library.reference.10=..\\Loonlibs
 
-android.library.reference.11=../JazzyViewPagerLibs
+android.library.reference.11=..\\JazzyViewPagerLibs
+android.library.reference.12=../SnaowFall
