--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lansun.qmyo"
-    android:versionCode="14"
-    android:versionName="1.2.14" >
+    android:versionCode="15"
+    android:versionName="1.3.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -12,7 +12,7 @@
     <application
         android:name="com.lansun.qmyo.app.App"
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/icon_redpack"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
