--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,11 +86,11 @@
         <!-- 抢红包的 分享页面  -->
         <activity
             android:name="com.lansun.qmyo.GrabRedPackActivity"
-            android:hardwareAccelerated="true"
+            android:hardwareAccelerated="false"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
+            android:theme="@style/GrabActivityTheme"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden"><!--  android:hardwareAccelerated="true" -->
         </activity>
         
         <activity
