--- a/project.properties
+++ b/project.properties
@@ -23,6 +23,6 @@ android.library.reference.7=..\\view.customviewpager
 android.library.reference.8=..\\DragImageView
 android.library.reference.9=..\\MultiPhotolib
 android.library.reference.10=..\\Loonlibs
-
 android.library.reference.11=..\\JazzyViewPagerLibs
-android.library.reference.12=../SnaowFall
+android.library.reference.12=..\\SnaowFall
+android.library.reference.13=../SwipeBackDemo
