Yeun.zhang 2016-01-26 版本 1.3.0.5
涉及修改内容：红包口令页面样式和数个细小bug修复

--- a/project.properties
+++ b/project.properties
@@ -13,16 +13,15 @@
 # Project target.
 target=android-22
 android.library=false
-android.library.reference.1=..\\BlurLibs
-android.library.reference.2=..\\CircurImageLibs
-android.library.reference.3=..\\wheel
-android.library.reference.4=..\\JpBlurryLibs
-android.library.reference.5=..\\FloatingButtonLibs
-android.library.reference.6=..\\JumpingLibs
-android.library.reference.7=..\\view.customviewpager
-android.library.reference.8=..\\DragImageView
-android.library.reference.9=..\\MultiPhotolib
-android.library.reference.10=..\\Loonlibs
-android.library.reference.11=..\\JazzyViewPagerLibs
-android.library.reference.12=..\\SnaowFall
-android.library.reference.13=../SwipeBackDemo
+android.library.reference.1=..\\CircurImageLibs
+android.library.reference.2=..\\wheel
+android.library.reference.3=..\\JpBlurryLibs
+android.library.reference.4=..\\FloatingButtonLibs
+android.library.reference.5=..\\JumpingLibs
+android.library.reference.6=..\\view.customviewpager
+android.library.reference.7=..\\DragImageView
+android.library.reference.8=..\\MultiPhotolib
+android.library.reference.9=..\\Loonlibs
+android.library.reference.10=..\\JazzyViewPagerLibs
+android.library.reference.11=..\\SnaowFall
+android.library.reference.12=../BlurLibs
