--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lansun.qmyo"
-    android:versionCode="15"
+    android:versionCode="16"
     android:versionName="1.3.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-    
 
     <application
         android:name="com.lansun.qmyo.app.App"
@@ -89,8 +88,7 @@
             android:hardwareAccelerated="false"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/GrabActivityTheme"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden"><!--  android:hardwareAccelerated="true" -->
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden"><!--  android:hardwareAccelerated="true"  android:theme="@style/GrabActivityTheme" -->
         </activity>
         
         <activity
@@ -118,7 +116,6 @@
             </intent-filter>
         </receiver>
 
-        
          <activity android:name="com.ns.mutiphotochoser.GalleryActivity" 
               android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
