Yeun.zhang 2016-02-01 版本 1.3.2.4 涉及修改内容：软键盘与界面之间错乱的问题

--- a/project.properties
+++ b/project.properties
@@ -14,14 +14,14 @@
 target=android-22
 android.library=false
 android.library.reference.1=..\\CircurImageLibs
-android.library.reference.2=..\\wheel
-android.library.reference.3=..\\JpBlurryLibs
-android.library.reference.4=..\\FloatingButtonLibs
-android.library.reference.5=..\\JumpingLibs
-android.library.reference.6=..\\view.customviewpager
-android.library.reference.7=..\\DragImageView
-android.library.reference.8=..\\MultiPhotolib
-android.library.reference.9=..\\Loonlibs
-android.library.reference.10=..\\JazzyViewPagerLibs
-android.library.reference.11=..\\SnaowFall
-android.library.reference.12=../BlurLibs
+android.library.reference.2=..\\JpBlurryLibs
+android.library.reference.3=..\\FloatingButtonLibs
+android.library.reference.4=..\\JumpingLibs
+android.library.reference.5=..\\view.customviewpager
+android.library.reference.6=..\\DragImageView
+android.library.reference.7=..\\MultiPhotolib
+android.library.reference.8=..\\Loonlibs
+android.library.reference.9=..\\JazzyViewPagerLibs
+android.library.reference.10=..\\SnaowFall
+android.library.reference.11=..\\BlurLibs
+android.library.reference.12=../wheel
