--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lansun.qmyo"
-    android:versionCode="16"
-    android:versionName="1.3.0" >
+    android:versionCode="19"
+    android:versionName="1.3.3" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -13,7 +13,8 @@
         android:allowBackup="true"
         android:icon="@drawable/icon_redpack"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:largeHeap="true">
 
         
 	     <!-- 包名为 com.qmyo.activity 本人(Yeun's PC上)申请开发模式下的高德地图的key -->
@@ -46,7 +47,7 @@
 	    <!-- 后台开启的高德定位服务 -->
         <service
                  android:name="com.lansun.qmyo.service.LocationService"
-                 android:exported="false" />   
+                 android:exported="false" />   <!--android:process=".Location"  -->
 	       
        
         <!-- 友盟的元数据 -->
@@ -72,6 +73,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         
         <activity
+            android:largeHeap="true"
             android:name="com.lansun.qmyo.MainActivity"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
