--- a/.project
+++ b/.project
@@ -29,5 +29,6 @@
 	<natures>
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>com.oneapm.agent.android.eclipse.plugin.OneApmNature</nature>
 	</natures>
 </projectDescription>
