--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lansun.qmyo"
-    android:versionCode="19"
-    android:versionName="1.3.3" >
+    android:versionCode="20"
+    android:versionName="1.3.4" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -11,7 +11,7 @@
     <application
         android:name="com.lansun.qmyo.app.App"
         android:allowBackup="true"
-        android:icon="@drawable/icon_redpack"
+        android:icon="@drawable/app_icon_0222"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
         android:largeHeap="true"
@@ -28,10 +28,10 @@
             android:value="7b6ab7010e05188877fb2c29dff0240c" /> -->
        
        
-        <!--  包名为com.lansun.qmyo 本人(Yeun's LansunCorp  PC上)申请开发模式下的高德地图的key -->
-        <meta-data
+       <!--  包名为com.lansun.qmyo 本人(Yeun's LansunCorp  PC上)申请开发模式下的高德地图的key -->
+       <!--  <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="e5b6027255bb77d1aa285e5cec53c134" /> 
+            android:value="e5b6027255bb77d1aa285e5cec53c134" />  -->
        
          <!--  包名为com.lansun.qmyo 本人(Yeun's  PC上)申请开发模式下的高德地图的key -->
          <!--  <meta-data
@@ -41,9 +41,9 @@
         
        
         <!--  包名为com.lansun.qmyo  申请    发布版本模式下的高德地图的key -->
-	   <!--  <meta-data
+	    <meta-data
 	            android:name="com.amap.api.v2.apikey"
-	            android:value="a81d22502d5958d33c95c7e32f97c656" />  -->
+	            android:value="a81d22502d5958d33c95c7e32f97c656" /> 
 	           
 	   
 	    <!-- 后台开启的高德定位服务 -->
@@ -100,6 +100,15 @@
         <activity
             android:name="com.lansun.qmyo.GrabRedPackActivity"
             android:hardwareAccelerated="false"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden"><!--  android:hardwareAccelerated="true"  android:theme="@style/GrabActivityTheme" -->
+        </activity>
+        
+        <!-- 地图  -->
+        <activity
+            android:name="com.lansun.qmyo.MapActivity"
+            android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden"><!--  android:hardwareAccelerated="true"  android:theme="@style/GrabActivityTheme" -->
